--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -27,3 +27,10 @@
 .list code {
   background: #f7f7f7;
 }
+
+.container2{
+    height: 500px;
+    margin-top: 10px;
+    position: absolute;
+    height: 100%;
+}
