--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-
-html, body, :global(#scleRoot) {
-  height: 100%;
+html,
+body,
+:global(#scleView) {
+  position: relative;
+  width: 100%;
+  height: 500px;
   overflow: hidden;
-  
 }
