--- a/src/routes/scle.less
+++ b/src/routes/scle.less
@@ -26,7 +26,10 @@
       
     }
     #glcanvas, #text{
-         width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
         height: 100%;
     }
 
