--- a/src/routes/scleAttrTree/scleAttrTree.less
+++ b/src/routes/scleAttrTree/scleAttrTree.less
@@ -1,6 +1,19 @@
 :global {
   .scleAttrTree {
+    @alphaBg: rgba(255, 255, 255, 0.6);
     text-align: center;
-    min-width: 300px;
+    width: 320px;
+
+    .ant-tabs-content {
+      text-align: left;
+    }
+
+    .ant-tree {
+      overflow-x: auto;
+    }
+
+    .ant-tabs-nav-wrap {
+      background: #fff;
+    }
   }
 }
