提供宽高控制

--- a/src/routes/scle.less
+++ b/src/routes/scle.less
@@ -18,9 +18,9 @@
                 max-height: 50%;
                 margin: 20px auto;
             }
-
             .ant-progress-outer{
-                max-width: 90%;
+                max-width: 50%;
+                min-width: 300px;
             }
         }
       
