--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -40,6 +40,16 @@
     }
   }
 
+  .cleTreeDrawer{
+    position: absolute;
+
+    .ant-drawer-content-wrapper{
+      max-width: 70%;
+      min-width: 275px;
+    }
+
+  }
+
   .progressSlider {
     width: 300px;
     margin: 0;
