--- a/src/index.less
+++ b/src/index.less
@@ -2,9 +2,9 @@ html,
 body,
 :global(#scleView) {
   position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  // width: 100%;
+  // height: 100%;
+  // overflow: hidden;
 }
 
 :global {
