--- a/src/routes/scleAttrTree/scleAttrTree.less
+++ b/src/routes/scleAttrTree/scleAttrTree.less
@@ -2,7 +2,7 @@
   .scleAttrTree {
     @alphaBg: rgba(255, 255, 255, 0.6);
     text-align: center;
-    width: 320px;
+    // width: 320px;
 
     .ant-tabs-content {
       text-align: left;
