i自定义事件变更

--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -18,7 +18,7 @@
         text-align: center;
       }
       .ant-tabs-tab {
-        font-size: 24px;
+        font-size: 1.2rem;
         text-align: center;
         padding: 0 16px;
         margin-right: 0;
@@ -54,8 +54,13 @@
     width: 300px;
     margin: 0;
     padding: 0;
+    
   }
-
+  @media screen and (max-width: 768px) {
+    .progressSlider {
+        width:  120px;
+    }
+}
   // -----------box----------------------------
 
   @boxwh: 30px;
@@ -130,4 +135,5 @@
     padding: 0 5px;
     width: 300px;
   }
+
 }
