隐藏功能修改

--- a/src/routes/scle.less
+++ b/src/routes/scle.less
@@ -1,8 +1,8 @@
 :global {
   .container {
-    display: inline-block;
-    position: relative;
+    // position: relative;
     height: inherit;
+    width: inherit;
     overflow: hidden;
     transition: width height 0.5s ease;
     + * {
@@ -46,14 +46,4 @@
     top: 0;
   }
 
-  .scleDesc{
-    width: 20%;
-    box-sizing: border-box;
-    padding: 10px;
-    height: inherit;
-    overflow-y: auto;
-    vertical-align: top;
-    white-space: pre-wrap;
-    word-break: break-all;
-  }
 }
