--- a/src/routes/scleAttrTree/scleAttrTree.less
+++ b/src/routes/scleAttrTree/scleAttrTree.less
@@ -10,10 +10,15 @@
 
     .ant-tree {
       overflow-x: auto;
+      width: 99%;
     }
 
     .ant-tabs-nav-wrap {
-      background: #fff;
     }
+  }
+  .attrTable{
+    .ant-table-thead > tr > th{
+        background:transparent;
+    }   
   }
 }
