--- a/public/webgl.css
+++ b/public/webgl.css
@@ -8,7 +8,7 @@
 	float: left;
 }
 .content {
-	display: inline-block;
+	/* display: inline-block; */
 	width: 20%;
 	height: 100%;
 	padding: 20px;
@@ -17,7 +17,8 @@
 }
 
 #scleView.mobile + .content {
-	width: 100%;
+    width: 100%;
+    height: auto;
 }
 #scleView.mobile {
 	width: 100%;
