--- a/src/routes/scle.less
+++ b/src/routes/scle.less
@@ -43,6 +43,70 @@
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 9999;
+    z-index: 1000;
   }
+
+.gltext{
+    position: absolute;
+    // top: 0;
+    // left: 0;
+    z-index: 1001;
+}
+
+.gltext2{
+    height: 73px;
+    width: 2px;
+    border-left: 1px dashed #fff;
+    &::after{
+        content: "●";
+        color: #fff;
+        position: absolute;
+        top: 100%;
+        left: -5px;
+    }
+}
+
+.scleViewPopver{
+    max-width: 375px;
+    .ant-popover-inner-content{
+        padding: 6px 16px;
+        background: rgba(255, 255, 255, 0.678);
+        border-radius: 5px;
+    }
+  
+}
+.hideArrow {
+    padding-bottom: 0;
+    .ant-popover-arrow{
+        display: none;
+    }
+}
+
+.ant-popover-placement-top.scleViewPopver > .ant-popover-content > .ant-popover-arrow{
+    border-right-color:  rgba(255, 255, 255, 0.678);
+    border-bottom-color:  rgba(255, 255, 255, 0.678);
+}
+
+.gltext{
+    .ant-table-thead>tr>th, .ant-table-tbody > tr > td {
+        background: transparent;
+    }
+    .ant-table-layout-fixed{
+        z-index: 1003;
+    }
+
+    &::before{
+        position: absolute;
+        content:'';
+        display: block;
+        width: 100%;
+        height: 100%;
+        filter: blur(10px);
+        left: 0;
+        top: 0;
+        background:rgba(255, 255, 255, 0.425);
+        box-shadow: 0 0 8px 0 #333;;
+        z-index:1000;
+    }
+}
 
