--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -5,7 +5,7 @@
 	.ant-tabs {
 		margin: 0 auto;
 		min-width: 320px;
-		max-width: 60%;
+		max-width: 560px;
 		z-index: 1;
 		background: hsla(0, 0%, 100%, 0.6);
 		padding: 10px 20px;
