更新SCLE集成方式

--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -152,3 +152,17 @@
         }
     }
     
+
+    .annotation_icons{
+        padding: 5px 10px;
+        background: rgba(255,255,255, 0.6);
+            border-radius: 10px;
+        .anticon{
+            padding:5px 10px;
+           font-size: 1.2rem;
+        }
+    }
+
+    .annotationInput{
+        position: absolute;
+    }
