--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -67,6 +67,7 @@
         width: 300px;
         margin: 0;
         padding: 0;
+        height: 10px;
     }
     // -----------box----------------------------
     
@@ -132,6 +133,8 @@
     
     .ant-popover-inner {
         background: transparent;
+        	padding-top: 10px;
+	padding-bottom: 5px;
     }
     
     .ant-popover-inner-content {
