--- a/public/default.css
+++ b/public/default.css
@@ -29,11 +29,12 @@
 
 
 .upload-group{
-    display: flex;
+    /* display: flex; */
 }
 
 .upload-group .ant-upload{
-    margin-left: 10px;
+    margin-bottom: 10px;
+	display: inline-block;
 }
 
 .partListTable{
