--- a/public/index.css
+++ b/public/index.css
@@ -20,11 +20,12 @@
 }
 
 .upload-group {
-	display: flex;
+	/* display: flex; */
 }
 
 .upload-group .ant-upload {
-	margin-left: 10px;
+	margin-bottom: 10px;
+	display: inline-block;
 }
 
 .partListTable {
