--- a/src/routes/scleAttrTree/scleAttrTree.less
+++ b/src/routes/scleAttrTree/scleAttrTree.less
@@ -42,3 +42,30 @@
 		background: transparent;
 	}
 }
+
+
+.title{
+	padding: 10px;
+    border-bottom: 1px solid rgba(174, 174, 174, 0.438);
+}
+
+.ant-drawer-body{
+	height: 100%;
+}
+.attr_tree{
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+
+	&>div{
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		overflow: auto;
+		
+		.ant-tree{
+			overflow: auto;
+		}
+	}
+	
+}
