--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -58,11 +58,53 @@
             min-width: 275px;
             .ant-drawer-content,
             .ant-tabs-nav-wrap {
+                overflow: visible;
                 background: rgba(255, 255, 255, 0.6);
             }
         }
+
+
+        .expand_box{
+            position: absolute;
+            top: 50%;
+            left: -15px;
+            height: 30px;
+            width: 30px;
+            margin-bottom: -15px;
+            margin-top: -15px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            box-shadow: 0 0 15px 3px #aaa;
+            cursor: pointer;
+            background: rgba(255, 255, 255,0.47);
+        }
     }
     
+    .fixed_left_tools{
+        position: fixed;
+        left: 0;
+        top: 20px;
+        .left_tools_btn{
+            margin-top: 20px;
+            background: rgb(255, 255, 255, .6);
+            padding: 6px 16px;
+            box-shadow: 2px 0 8px rgba(0 ,0, 0,.15);
+            font-size: 18px;
+            cursor: pointer;
+            border-top-right-radius: 6px;
+            border-bottom-right-radius: 6px;
+            &.active{
+                color: #1890ff;
+            }
+        }
+       
+    }
+
+
+
     .progressSlider {
         width: 300px;
         margin: 0;
@@ -169,3 +211,18 @@
     .annotationInput{
         position: absolute;
     }
+
+
+
+.checkbox_item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+
+    &_icon{
+        cursor: pointer;
+    }
+
+}
