--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -66,29 +66,18 @@
 
         .expand_box{
             position: absolute;
-            top: 50%;
-            left: -15px;
-            height: 30px;
-            width: 30px;
+            top: 40px;
+            right: -40px;
+            height: 40px;
+            width: 40px;
             margin-bottom: -15px;
             margin-top: -15px;
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            border-radius: 50%;
-            box-shadow: 0 0 15px 3px #aaa;
             cursor: pointer;
-            background: rgba(255, 255, 255,0.47);
-        }
-    }
-    
-    .fixed_left_tools{
-        position: fixed;
-        left: 0;
-        top: 20px;
-        .left_tools_btn{
-            margin-top: 20px;
+            background: rgb(255, 255, 255, .6);
             background: rgb(255, 255, 255, .6);
             padding: 6px 16px;
             box-shadow: 2px 0 8px rgba(0 ,0, 0,.15);
@@ -100,8 +89,38 @@
                 color: #1890ff;
             }
         }
-       
+
+        .expand_box2{
+            left: -40px;
+            right: 0;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+            border-top-left-radius: 6px;
+            border-bottom-left-radius: 6px;
+        }
     }
+
+
+    
+    // .fixed_left_tools{
+    //     position: absolute;
+    //     right: 0;
+    //     top: 20px;
+    //     .left_tools_btn{
+    //         margin-top: 20px;
+    //         background: rgb(255, 255, 255, .6);
+    //         padding: 6px 16px;
+    //         box-shadow: 2px 0 8px rgba(0 ,0, 0,.15);
+    //         font-size: 18px;
+    //         cursor: pointer;
+    //         border-top-left-radius: 6px;
+    //         border-bottom-left-radius: 6px;
+    //         &.active{
+    //             color: #1890ff;
+    //         }
+    //     }
+       
+    // }
 
 
 
@@ -225,4 +244,42 @@
         cursor: pointer;
     }
 
+    .ant-checkbox-wrapper{
+        margin-right: 10px;
+
+        &+span{
+            cursor: pointer;
+        }
+    }
+
+}
+
+
+
+
+.ant-card-head-title{
+    cursor: move;
+}
+
+.close_icon{
+    cursor: pointer;
+}
+
+.activeAxis{
+    color: #1890ff;
+}
+
+
+.pq_card{
+    position: absolute;
+    bottom: 70px;
+    right: 70px;
+    z-index: 9999;
+    &_title{
+        padding-bottom: 12px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border-bottom: 1px solid #e4e4e4;
+    }
 }
