--- a/src/routes/scle.less
+++ b/src/routes/scle.less
@@ -1,9 +1,18 @@
+    
+   .out_box{
+    height: inherit;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+   } 
     .container {
         position: relative;
         height: inherit;
         width: inherit;
         overflow: hidden;
         transition: width height 0.5s ease;
+        flex:1;
+        
         + * {
           display: inline-block;
           overflow: hidden;
