--- a/src/routes/scleAttrTree/scleAttrTree.less
+++ b/src/routes/scleAttrTree/scleAttrTree.less
@@ -1,3 +1,4 @@
+
 .scleAttrTree {
 	@alphaBg: rgba(255, 255, 255, 0.6);
 	text-align: center;
@@ -53,11 +54,26 @@
 .ant-drawer-body{
 	height: 100%;
 }
+
+.tree_box{
+	width: 300px;
+	max-width: 25%;
+	transition: width .3s ease;
+	&>*{
+		width: inherit;
+	}
+}
+
+.hideTree{
+	width: 0;
+}
+
+
+
 .attr_tree{
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-
 	&>div{
 		flex: 1;
 		display: flex;
