fix : 还原模型树及参数弹窗展示，增加全局loading、剖切窗口可移动, 更换颜色接口

--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -91,6 +91,7 @@
         }
 
         .expand_box2{
+            top: 200px;
             left: -40px;
             right: 0;
             border-top-right-radius: 0;
