--- a/src/routes/scle.less
+++ b/src/routes/scle.less
@@ -5,6 +5,19 @@
     justify-content: space-between;
     flex-direction: row;
    } 
+   .page_loading{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
     .container {
         position: relative;
         height: inherit;
