--- a/public/default.css
+++ b/public/default.css
@@ -4,13 +4,13 @@
     */
 #scleView {
 	/* 给SCLE设定宽高 */
-	min-width: 80%; 
+	min-width: calc(100% - 158px); 
 	height: 100%;
 	float: left;
 }
 .content {
 	/* display: inline-block; */
-	width: 20%;
+	width: 158px;
 	height: 100%;
 	padding: 10px;
 	overflow: auto;
