--- a/src/routes/scleAttrTree/scleAttrTree.less
+++ b/src/routes/scleAttrTree/scleAttrTree.less
@@ -56,11 +56,17 @@
 }
 
 .tree_box{
-	width: 300px;
-	max-width: 25%;
+	width: 100%;
+	// width: 300px;
+	// max-width: 25%;
 	transition: width .3s ease;
 	&>*{
 		width: inherit;
+	}
+
+	.ant-tabs-content {
+		flex: 1;
+		overflow: hidden;
 	}
 }
 
@@ -82,6 +88,7 @@
 		
 		.ant-tree{
 			overflow: auto;
+			height: 100%;
 		}
 	}
 
