--- a/src/routes/scleTools/scleTools.less
+++ b/src/routes/scleTools/scleTools.less
@@ -2,6 +2,7 @@
         position: absolute;
         bottom: 10px;
         width: 100%;
+        text-align: center;
         .ant-tabs {
             margin: 0 auto;
             min-width: 320px;
