--- a/src/routes/scleTools/index.less
+++ b/src/routes/scleTools/index.less
@@ -12,7 +12,7 @@
 		justify-content: center;
 		align-items: center;
 		margin: 0 auto;
-		min-width: 320px;
+		// min-width: 320px;
 		max-width: 560px;
 		z-index: 1;
 		background: hsla(0, 0%, 100%, 0.6);
